# Oblivious-Multi-Way-Band-Joins

./: .gitignore  BATCHING_STATUS.md  BATCH_IMPLEMENTATION_PLAN.md  CLAUDE.md  Makefile  PATHS.md  README.md  SLIM_MODE_CHECKLIST.md  SLIM_MODE_MIGRATION_PLAN.md  TDX_MIGRATION_COMPLETE.md  TDX_MIGRATION_PLAN.md  TDX_MIGRATION_SUMMARY.md  TEST_STATUS_REPORT.md  batch_implementation_plan.md  clean_kway_network.py  convert_tpch_with_limits.py  output.csv  p2132-krastnikov.md  report.md  test_big_data.txt  test_config.txt  test_config_small.txt  test_join_batch  test_merge_sort  test_results.tex  test_shuffle_manager  test_waksman_fixed.py  test_waksman_python.py  todo.md  waksman_analysis.py
app/: core_logic_callbacks.cpp  debug_stubs.cpp
app/algorithms/: align_concat.cpp  align_concat.h  bottom_up_phase.cpp  bottom_up_phase.h  distribute_expand.cpp  distribute_expand.h  merge_sort_manager.cpp  merge_sort_manager.h  oblivious_join.cpp  oblivious_join.h  or_shuffle.hpp  shuffle_manager.cpp  shuffle_manager.h  top_down_phase.cpp  top_down_phase.h
app/batch/: ecall_batch_collector.cpp  ecall_batch_collector.h  ecall_wrapper.cpp  ecall_wrapper.h
app/core_logic/: core.h
app/crypto/: crypto_utils.cpp  crypto_utils.h
app/data_structures/: data_structures.h  data_types.h  entry.cpp  entry.h  entry_oblivious_ops.h  table.cpp  table.h
app/enclave_logic/: core.h  debug_wrapper.c
app/file_io/: converters.cpp  converters.h  io_entry.h  table_io.cpp  table_io.h
app/io/: converters.h  io_entry.h  table_io.h
app/join/: join_attribute_setter.cpp  join_attribute_setter.h  join_condition.h  join_constraint.cpp  join_constraint.h  join_tree_builder.h  join_tree_node.h
app/query/: condition_merger.h  filter_condition.cpp  filter_condition.h  inequality_parser.h  parsed_query.h  query_parser.cpp  query_tokenizer.cpp  query_tokenizer.h
app/sgx_compat/: Enclave_u.h  sgx_ecalls.cpp  sgx_types.h  sgx_urts.cpp  sgx_urts.h
app/utils/: counted_ecalls.h  ecall_wrapper.cpp
apps/sgx_join/: main.cpp
common/: batch_types.h  comparator_convention.h  constants.h  debug_config.h  debug_util.h  enclave_types.h  entry_utils.h  op_types.h  types_common.h
doc/: query-decomposition.md
docs/: CLAUDE.md  PATHS.md  README.md  REORGANIZATION_PLAN.md  experiments.md  obliviator_baseline_status.md  obliviator_multiway_design.md  parallel_dedup_redup.md  workloads.md
enclave/trusted/: Enclave.cpp  Enclave.edl  Enclave_private.pem  Enclave_t.c  Enclave_t.h  aes_crypto.h  batch_dispatcher.c  batch_dispatcher.h  comparators.c  core.h  crypto_helpers.c  crypto_helpers.h  distribute_functions.c  enclave_types.h  entry_crypto.h  test_ecalls.c  (+3 more)
obligraph/: .gitignore  CMakeLists.txt  LICENSE  README.md  data_generator.py  technical_approach.md
obligraph/benchmarks/: banking_onehop_results.md
obligraph/doc/: hash_planner.md  hashmap_security_approaches.md  one-hop-slides.md
obligraph/include/: config.h  definitions.h  node_index.h  obl_building_blocks.h  obl_primitives.h  obl_row_ops.h  schema_parser.h  slice_utils.h  threadpool.h  timer.h
obligraph/src/: banking_onehop.cpp  config.cpp  custom_dataset_query.cpp  definitions.cpp  driver.cpp  ibm_aml_onehop.cpp  ldbc_is_3.cpp  oneHop.cpp  operators.cpp  par_obl_primitives.cpp  schema_parser.cpp
obligraph/tests/: catalogTests.cpp  cypherSchemaTests.cpp  obliviousPrimitivesTests.cpp  oneHopTests.cpp  operatorTests.cpp  parallelSortTests.cpp
oblivious_hashmap/: CMakeLists.txt
oblivious_hashmap/examples/: main.cpp
oblivious_hashmap/include/: hash_planner.hpp  ocompact.hpp  ohash_tiers.hpp  oram_iterator.hpp  prf.hpp
oblivious_hashmap/src/: depthCounter.cpp  oblivious_operations.cpp  prp.cpp  timer.cpp
oblivious_hashmap/tests/: ohash_table_test.cpp
output/: three_table_chain_encrypted_summary.txt  tpch_tb1_data_0_001_summary.txt  tpch_tb1_fat_encrypted_1756529859_summary.txt  tpch_tb1_fat_encrypted_1756529870_summary.txt  tpch_tb1_fat_encrypted_1756530496_summary.txt  tpch_tb1_slim_test_fixed_summary.txt  tpch_tb1_test_encrypt_summary.txt  tpch_tb1_tpch_test_summary.txt  tpch_tb2_data_0_001_summary.txt  two_center_chain_encrypted_summary.txt  two_center_chain_fat_two_center_1756530498_summary.txt  two_table_basic_encrypted_summary.txt
paper/: main.tex
plan/: BATCH_REMOVAL_PLAN.md  OBLIVIOUS_BAND_JOIN_ALGORITHM.md  PATHS.md  SORTING_BENCHMARK.md  e1_todo.md  e2_todo.md  entry-conversion-removal-todo.md  entry-conversion-removal.md  integration_questions.md  plan.md
queries/: tpch_tb1.sql  tpch_tm3.sql
scripts/: benchmark_decomposition.sh  benchmark_scaling.sh  build.sh  convert_banking_to_obligraph.py  convert_ibm_aml_to_nebuladb.py  generate_banking_batch.py  generate_banking_data.py  generate_banking_high_ratio.sh  generate_banking_scaled.py  generate_banking_small.py  generate_banking_test_data.py  get_query_counts.py  make_slim_hi_large.py  plot_scaling_benchmark.py  rewrite_chain_query.py  run_banking_bench.sh  run_banking_high_ratio_bench.sh  run_banking_small_tests.sh  run_banking_tests.sh  run_decomposed_pipeline.sh  run_filter_tests.sh  run_onehop_scaling.py  run_selected_tests.sh  run_sequential_tests.sh  run_sort_benchmark.sh  run_tpch_tests.sh  setup_env.sh  test.sh  test_banking_query.sh
test_access_patterns/: README_TRACE_VERIFICATION.md  generate_test_datasets.py  run_encrypted_verification.sh  run_oblivious_verification.py  test_encrypted_tb1.sh  verification_results.json  verify_datasets.py
tests/: test_e1_chain_correctness.py  test_large_scale_regression.py  test_onehop_correctness.py  test_onehop_correctness_scaled.py  test_pipeline_correctness.py
thesis/: chapter-algorithm-detail.tex  chapter-algorithm-overview.tex  chapter-background.tex  chapter-conclusion.tex  chapter-evaluation.tex  chapter-implementation.tex  chapter-introduction.tex  chapter-related-work.tex  chapter-security.tex  glossaries.tex  notation.tex  uw-ethesis-frontpgs.tex  uw-ethesis.aux  uw-ethesis.bbl  uw-ethesis.bib  uw-ethesis.blg  uw-ethesis.ist  uw-ethesis.lot  uw-ethesis.out  uw-ethesis.tex  uw-ethesis.toc
tools/: encrypt_tables.cpp
(+486 files in other folders)
